# MagangBayu24-ROS2

./: README.md
tugas1/: README.md
tugas1/install/: local_setup.sh  setup.sh
tugas1/install/mat_random/lib/mat_random/: pembuatSoal  pengerjaSoal
tugas1/install/mat_random/share/mat_random/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tugas1/log/: latest_build
tugas1/src/mat_random/: CMakeLists.txt
tugas1/src/mat_random/src/: buat_soal_dan_kirim.cpp  terima_soal_dan_kerjakan.cpp
tugas2/: README.md
tugas2/install/: local_setup.sh  setup.sh
tugas2/install/and_publisher/lib/and_publisher/: listener  talker1  talker2
tugas2/install/and_publisher/share/and_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tugas2/log/: latest_build
tugas2/src/and_publisher/: CMakeLists.txt
tugas2/src/and_publisher/src/: publisher1.cpp  publisher2.cpp  subscriber_main.cpp
tugas3/: README.md
tugas3/install/: local_setup.sh  setup.sh
tugas3/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
tugas3/log/: latest_build
tugas3/src/py_pubsub/: setup.py
